--- a/deploy/helm-chart/templates/configmap.yaml
+++ b/deploy/helm-chart/templates/configmap.yaml
@@ -1,4 +1,4 @@
-{{- $fullname := include "node-ping-exporter.fullname" . -}}
+{{- $fullname := include "kube-node-ping-exporter.fullname" . -}}
 
 
 apiVersion: v1
@@ -7,7 +7,7 @@ metadata:
   name: {{ $fullname }}
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "node-ping-exporter.labels" . | nindent 4 }}
+    {{- include "kube-node-ping-exporter.labels" . | nindent 4 }}
 {{- with $.Values.configmap.data }}
 data: {{- toYaml . | nindent 2 }}
 {{- end }}
