--- a/deploy/main.yaml
+++ b/deploy/main.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: node-ping-exporter
+  name: kube-node-ping-exporter
   namespace: mon
   labels:
-    app.kubernetes.io/name: node-ping-exporter
+    app.kubernetes.io/name: kube-node-ping-exporter
 data:
   nodes.json: >
     [
@@ -19,23 +19,23 @@ data:
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  name: node-ping-exporter
+  name: kube-node-ping-exporter
   namespace: mon
   labels:
-    app.kubernetes.io/name: node-ping-exporter
+    app.kubernetes.io/name: kube-node-ping-exporter
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: node-ping-exporter
+      app.kubernetes.io/name: kube-node-ping-exporter
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: node-ping-exporter
+        app.kubernetes.io/name: kube-node-ping-exporter
     spec:
       terminationGracePeriodSeconds: 0
       containers:
-      - name: node-ping-exporter
-        image: vfabi/node-ping-exporter:latest
+      - name: kube-node-ping-exporter
+        image: vfabi/kube-node-ping-exporter:latest
         imagePullPolicy: IfNotPresent
         env:
           - name: APP_NODE_NAME
@@ -59,4 +59,4 @@ spec:
       volumes:
         - name: config
           configMap:
-            name: node-ping-exporter
+            name: kube-node-ping-exporter
